# AdventOfCode

2021/01/: solve.py
2021/02/: solve.py
2021/python/01/: solve.py
2021/rust/aoc-runner/: Cargo.toml
2021/rust/aoc-runner/src/solutions/: mod.rs
2021/rust/aoc-runner/src/solutions/day05/: solution.rs
2021/rust/aoc-runner/src/solutions/day09/: mod.rs  solution.rs
2021/rust/aoc-runner/src/solutions/day10/: solution.rs
2021/rust/aoc-runner/src/solutions/day11/: solution.rs
2021/rust/aoc-runner/src/solutions/day12/: solution.rs
2021/rust/day-template/benches/: solutions_benchmark.rs
2021/rust/day-template/src/: main.rs  solution.rs
2021/rust/day/12/: Cargo.toml
2021/rust/day/12/src/: lib.rs  main.rs  solution.rs
2021/rust/day/13/: Cargo.toml
2021/rust/day/13/src/: lib.rs  main.rs
2021/rust/src/: lib.rs
2021/rust/src/solutions/: mod.rs
2021/rust/src/solutions/day06/: solution.rs
2021/rust/src/solutions/day07/: solution.rs
2021/rust/src/solutions/day08/: solution.rs
